2001-05-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/bsp.h: Include bspopts.h.

2001-05-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: Add bspopts.h.
	* include/.cvsignore: Add bspopts.h*, coverhd.h, stamp-h*.
	* include/Makefile.am: Use *_HEADERS instead of *H_FILES.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-10-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
        Switch to GNU canonicalization.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.