@@ -12,11 +12,11 @@ $(PROJECT_INCLUDE):
 $(PROJECT_INCLUDE)/%.h: %.h
 	$(INSTALL_DATA) $< $@
 
-coverhd.h: $(top_srcdir)/../../shared/include/coverhd.h
+coverhd.h: $(top_srcdir)/../shared/include/coverhd.h
 	$(INSTALL_DATA) $< $@
-CLEANFILES += coverhd.h
+CLEANFILES = coverhd.h
 
-TMPINSTALL_FILES += $(PROJECT_INCLUDE) \
+TMPINSTALL_FILES = $(PROJECT_INCLUDE) \
     $(include_HEADERS:%=$(PROJECT_INCLUDE)/%)
 
 all-local: $(TMPINSTALL_FILES)
